Allow style to be set through props and fix whitespace issue with calendar picker

--- a/packages/core/src/components/DatePicker/style.scss
+++ b/packages/core/src/components/DatePicker/style.scss
@@ -5,3 +5,7 @@
 .md-dark {
   color: black;
 }
+
+.ms-TextField-suffix {
+  background: inherit!important;
+}
